shmsink: Allocate enough memory to do alignment

https://bugzilla.gnome.org/show_bug.cgi?id=731093